--- a/rails_II/belt_reviewer/app/views/application/index.html.erb
+++ b/rails_II/belt_reviewer/app/views/application/index.html.erb
@@ -1,65 +1,31 @@
-<div class="row">
-    <div class="col-1"></div>
-    <!-- Register Form -->
-    <div class="col-5">
-        <h2>Register</h2>
-        <form action="/users" method="post">
-            <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-
-            <div class="form-group">
-                <label for="first_name">First Name:</label>
-                <input type="text" name="user[first_name]" id="first_name" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="last_name">Last Name:</label>
-                <input type="text" name="user[last_name]" id="last_name" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" name="user[email]" id="email" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="city">Location:</label>
-                <input type="text" name="location[city]" id="city" class="form-control" />
-                <input type="text" name="location[state]" id="state" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" name="user[password]" id="password" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="password_confirmation">Password Confirmation:</label>
-                <input type="password" name="user[password_confirmation]" id="password_confirmation" class="form-control" />
-            </div>
-
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
-    <!-- End Registration Form -->
-    <!-- Login Form -->
-    <div class="col-5">
-        <h2>Login</h2>
-        <form action="/login" method="post">
-            <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" class="form-control" />
-            </div>
-
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-    </div>
-    <!-- End Login Form -->
-    <div class="col-1"></div>
-</div>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <title>Index</title>
+   </head>
+   <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <a class="navbar-brand" href="#">HangOut</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+               <li class="nav-item">
+                  <a class="nav-link" href="/users/new">Log in/Sign up</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
+      <div class="container-fluid">
+         <p>image</p>
+      </div>
+      <div class="container">
+         <p>how hangouts works</p>
+      </div>
+      <footer class="container">
+         <p>footer</p>
+      </footer>
+   </body>
+</html>
