--- a/rails_II/belt_reviewer/app/views/events/index.html.erb
+++ b/rails_II/belt_reviewer/app/views/events/index.html.erb
@@ -1,36 +1,58 @@
-<h1>Welcome, <%= current_user.first_name.titleize %> <%= current_user.last_name.titleize %></h1>
-
-<a href='/logout' data-method="delete">Logout</a><br>
-<a href='/users/<%= current_user.id %>/edit'>Edit My Profile</a>
-<br>
-
-<!-- In State Events -->
-<h2>In State Events:</h2>
-<% if @in_state_events %>
-   <table class='table'>
-      <thead>
-         <tr>
-            <th>Name</th>
-            <th>Date</th>
-            <th>Location</th>
-            <th>Host</th>
-            <th>Action/Status</th>
-         </tr>
-      </thead>
-      <tbody>
-         <tr>
-            <% @in_state_events.each do |event| %>
-               <td><a href='/events/<%= event.id %>'><%= event.name %></a></td>
-               <td><%= event.date %></td>
-               <td><%= event.location.city %></td>
-               <td><%= event.user.first_name.titleize %></td>
-               <td>
-                  <% if event.user==current_user %>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <title></title>
+   </head>
+   <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <a class="navbar-brand" href="#">HangOut</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+               <li class="nav-item">
+                  <a class="nav-link" href='/events/new'>Create Event</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href='/logout' data-method="delete">Log out</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
+      <div class="container">
+         <h1>Welcome, <%= current_user.first_name.titleize %> <%= current_user.last_name.titleize %></h1>
+         <a href='/users/<%= current_user.id %>/edit'>Edit My Profile</a>
+      </div>
+      <div class="container">
+         <!-- In State Events -->
+         <h2>In State Events:</h2>
+         <% if @in_state_events %>
+         <table class='table'>
+            <thead>
+               <tr>
+                  <th>Name</th>
+                  <th>Date</th>
+                  <th>Location</th>
+                  <th>Host</th>
+                  <th>Action/Status</th>
+               </tr>
+            </thead>
+            <tbody>
+               <tr>
+                  <% @in_state_events.each do |event| %>
+                  <td><a href='/events/<%= event.id %>'><%= event.name %></a></td>
+                  <td><%= event.date %></td>
+                  <td><%= event.location.city %></td>
+                  <td><a href="/users/<%= event.user.id %>"><%= event.user.first_name.titleize %></a></td>
+                  <td>
+                     <% if event.user==current_user %>
 
                      <a href="/events/<%= event.id%>/edit">Edit</a>
                      <a href="/events/<%= event.id%>" data-method='delete'>Delete</a>
 
-                  <% else %>
+                     <% else %>
                      <!-- Join Action -->
                      <% unless event.users.include? current_user %>
                      <form action="/events/<%= event.id %>/user" method="post">
@@ -39,81 +61,57 @@
                      </form>
                      <!-- End Join Action -->
                      <% else %>
-                        <span>Joining</span>
-                        <!-- Cancel Action -->
-                        <form action='/events/<%= event.id %>/user' method='post'>
-                           <input type='hidden' name='_method' value='delete'>
-                           <input type='hidden' name='authenticity_token' value="<%= form_authenticity_token %>">
-                           <button class='btn btn-danger'>Cancel</button>
-                        </form>
-                        <!-- end cancel action -->
+                     <span>Joining</span>
+                     <!-- Cancel Action -->
+                     <form action='/events/<%= event.id %>/user' method='post'>
+                        <input type='hidden' name='_method' value='delete'>
+                        <input type='hidden' name='authenticity_token' value="<%= form_authenticity_token %>">
+                        <button class='btn btn-danger'>Cancel</button>
+                     </form>
+                     <!-- end cancel action -->
                      <% end %>
+                     <% end %>
+                  </td>
                   <% end %>
-               </td>
+               </tr>
+            </tbody>
+         </table>
+         <% else %>
+         <h4>Empty</h4>
+         <% end %>
+         <!-- End in state events -->
+
+         <!-- Out of state events -->
+         <h2>Out of State Events:</h2>
+         <% unless @out_of_state_events.empty? %>
+         <table class='table'>
+            <thead>
+               <tr>
+                  <th>Name</th>
+                  <th>Date</th>
+                  <th>Location</th>
+                  <th>State</th>
+                  <th>Host</th>
+                  <th>Action/Status</th>
+               </tr>
+            </thead>
+            <% @out_of_state_events.each do |event| %>
+            <tbody>
+               <tr>
+                  <td><a href='/events/<%= event.id %>'><%= event.name %></a></td>
+                  <td><%= event.date %></td>
+                  <td><%= event.location.city %></td>
+                  <td><%= event.location.state %></td>
+                  <td><%= event.user.first_name.titleize %></td>
+                  <td> Not Yet!</td>
+               </tr>
+            </tbody>
             <% end %>
-         </tr>
-      </tbody>
-   </table>
-<% else %>
-   <h4>Empty</h4>
-<% end %>
-<!-- End in state events -->
-
-<!-- Out of state events -->
-<h2>Out of State Events:</h2>
-<% unless @out_of_state_events.empty? %>
-   <table class='table'>
-      <thead>
-         <tr>
-            <th>Name</th>
-            <th>Date</th>
-            <th>Location</th>
-            <th>State</th>
-            <th>Host</th>
-            <th>Action/Status</th>
-         </tr>
-      </thead>
-      <% @out_of_state_events.each do |event| %>
-         <tbody>
-            <tr>
-               <td><a href='/events/<%= event.id %>'><%= event.name %></a></td>
-               <td><%= event.date %></td>
-               <td><%= event.location.city %></td>
-               <td><%= event.location.state %></td>
-               <td><%= event.user.first_name.titleize %></td>
-               <td> Not Yet!</td>
-            </tr>
-         </tbody>
-      <% end %>
-   </table>
-<% else %>
-   <h4>Empty</h4>
-<% end %>
-<!-- End out of state events -->
-
-<!-- Event Form  -->
-<div class="col-5">
-   <h2>Add Event</h2>
-   <form action="/events" method="post">
-      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-
-      <div class="form-group">
-         <label for="name">Name:</label>
-         <input type="text" name="event[name]" id="name" class="form-control" />
+         </table>
+         <% else %>
+         <h4>Empty</h4>
+         <% end %>
+         <!-- End out of state events -->
       </div>
-
-      <div class="form-group">
-         <label for="date">Date:</label>
-         <input type="date" name="event[date]" id="date" class="form-control" />
-      </div>
-
-      <div class="form-group">
-         <label for="city">Location:</label>
-         <input type="text" name="event[city]" id="city" class="form-control" />
-         <input type="text" name="event[state]" id="state" class="form-control" />
-      </div>
-
-      <button type="submit" class="btn btn-primary">Add Event</button>
-   </form>
-</div>
-<!-- End Event Form -->
+   </body>
+</html>
