--- a/rails_II/belt_reviewer/app/views/events/new.html.erb
+++ b/rails_II/belt_reviewer/app/views/events/new.html.erb
@@ -21,43 +21,38 @@
             </ul>
          </div>
       </nav>
+
+      <!-- Event Form  -->
       <div class="container">
          <div class="row">
             <div class="col-3"></div>
-            
             <div class="col-6">
-               <h2>Edit Your Profile</h2>
-               <form action="/users/<%= @user.id %>" method="post">
+               <h2>Add Event</h2>
+               <form action="/events" method="post">
                   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-                  <input type='hidden' name='_method' value='patch'>
 
                   <div class="form-group">
-                     <label for="first_name">First Name:</label>
-                     <input type="text" name="user[first_name]" value="<%= @user.first_name.titleize %>" id="first_name" class="form-control" />
+                     <label for="name">Name:</label>
+                     <input type="text" name="event[name]" id="name" class="form-control" />
                   </div>
 
                   <div class="form-group">
-                     <label for="last_name">Last Name:</label>
-                     <input type="text" name="user[last_name]" value="<%= @user.last_name.titleize %>" id="last_name" class="form-control" />
-                  </div>
-
-                  <div class="form-group">
-                     <label for="email">Email:</label>
-                     <input type="email" name="user[email]" value="<%= @user.email %>" id="email" class="form-control" />
+                     <label for="date">Date:</label>
+                     <input type="date" name="event[date]" id="date" class="form-control" />
                   </div>
 
                   <div class="form-group">
                      <label for="city">Location:</label>
-                     <input type="text" name="location[city]" value="<%= @user.location.city %>" id="city" class="form-control" />
-                     <input type="text" name="location[state]" value="<%= @user.location.state %>" id="state" class="form-control" />
+                     <input type="text" name="event[city]" id="city" class="form-control" placeholder="City"/><br>
+                     <input type="text" name="event[state]" id="state" class="form-control" placeholder="State"/>
                   </div>
 
-                  <button type="submit" class="btn btn-primary">Update Profile</button>
+                  <button type="submit" class="btn btn-primary">Add Event</button>
                </form>
             </div>
-
             <div class="col-3"></div>
          </div>
       </div>
+      <!-- End Event Form -->
    </body>
 </html>
