--- a/rails_II/belt_reviewer/app/assets/stylesheets/application.css
+++ b/rails_II/belt_reviewer/app/assets/stylesheets/application.css
@@ -1,15 +1,24 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+#indexImage{
+   background-image: url("/assets/index1.jpg");
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+   width: 100%;
+   height: 450px;
+   border-top: 1px solid black;
+   border-bottom: 1px solid black;
+}
+#indexDescription{
+   padding-top: 20px;
+   padding-bottom: 20px;
+}
+#indexDescription div h1{
+   color: white;
+}
+#indexDescription div h3,p{
+   color: white;
+}
+footer{
+   padding-top: 20px;
+   padding-bottom: 20px;
+}
