--- a/rails_II/belt_reviewer/app/views/users/edit.html.erb
+++ b/rails_II/belt_reviewer/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
    </head>
    <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" href="#">HangOut</a>
+         <a class="navbar-brand" href="#">GrouUp</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
@@ -24,7 +24,7 @@
       <div class="container">
          <div class="row">
             <div class="col-3"></div>
-            
+
             <div class="col-6">
                <h2>Edit Your Profile</h2>
                <form action="/users/<%= @user.id %>" method="post">
